2021/file-pandas-nato-alphabet/list_comprehension.txt
List comprehensive

>>> number = [1,2,3]
>>> list_baru = [n+1 for n in number]
>>> print(list_baru)
[2, 3, 4]
>>> name = "Priambodo"

>>> namabaru = [huruf for huruf in nama]

Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'nama' is not defined

>>> namabaru = [huruf for huruf in name]

>>> print(namabaru)
['P', 'r', 'i', 'a', 'm', 'b', 'o', 'd', 'o']
>>> listbaru = [ n*2 for n in range(1,5)]
>>> print(listbaru)
[2, 4, 6, 8]
>>> listbaru
[2, 4, 6, 8]
>>> namabaru
['P', 'r', 'i', 'a', 'm', 'b', 'o', 'd', 'o']
>>> names = ["Alex","Beth"."Caroline","Dave","Eleanor","Freddie"]
  File "<stdin>", line 1
    names = ["Alex","Beth"."Caroline","Dave","Eleanor","Freddie"]
                           ^
SyntaxError: invalid syntax
>>> names = ["Alex","Beth","Caroline","Dave","Eleanor","Freddie"]

>>> shortname = [name for name in names if len(name)==4]

>>> shortname
['Alex', 'Beth', 'Dave']

>>> longname = [name.upper() for name in names if len(name)>4]

>>> longname
['CAROLINE', 'ELEANOR', 'FREDDIE']
>>> 
